arm64: configs: Tone: Enable CONFIG_SND_DYNAMIC_MINORS
This configuration option is essential for audio to work.

--- a/arch/arm64/configs/aosp_tone_dora_defconfig
+++ b/arch/arm64/configs/aosp_tone_dora_defconfig
@@ -485,6 +485,7 @@ CONFIG_SND=y
 # CONFIG_SND_SPI is not set
 CONFIG_SND_USB_AUDIO=y
 CONFIG_SND_SOC=y
+CONFIG_SND_DYNAMIC_MINORS=y
 CONFIG_HIDRAW=y
 CONFIG_UHID=y
 CONFIG_HID_APPLE=y
