--- a/arch/arm64/configs/aosp_tone_kagura_defconfig
+++ b/arch/arm64/configs/aosp_tone_kagura_defconfig
@@ -481,6 +481,7 @@ CONFIG_LCD_CLASS_DEVICE=y
 CONFIG_BACKLIGHT_CLASS_DEVICE=y
 CONFIG_SOUND=y
 CONFIG_SND=y
+CONFIG_SND_DYNAMIC_MINORS=y
 # CONFIG_SND_PCI is not set
 # CONFIG_SND_SPI is not set
 CONFIG_SND_USB_AUDIO=y
