arm64: DT: msm8996-gpu: Add mas-crypto property to GPU TZ loader
The TZ firmware loader requires mas-crypto to vote for the
right msm-bus.

--- a/arch/arm64/boot/dts/qcom/msm8996-gpu.dtsi
+++ b/arch/arm64/boot/dts/qcom/msm8996-gpu.dtsi
@@ -17,6 +17,7 @@
 		qcom,pas-id = <13>;
 		qcom,firmware-name = "a530_zap";
 		memory-region = <&peripheral_mem>;
+		qcom,mas-crypto = <&mas_crypto_c0>;
 		clock-names = "scm_core_clk", "scm_iface_clk",
 				"scm_bus_clk", "aggre2";
 		qcom,proxy-clock-names = "scm_core_clk", "scm_iface_clk",
