--- a/arch/arm64/configs/aosp_tone_keyaki_defconfig
+++ b/arch/arm64/configs/aosp_tone_keyaki_defconfig
@@ -404,9 +404,11 @@ CONFIG_POWER_RESET_QCOM=y
 CONFIG_POWER_RESET_XGENE=y
 CONFIG_POWER_RESET_SYSCON=y
 CONFIG_QPNP_FG=y
+CONFIG_QPNP_FG_EXTENSION=y
 CONFIG_SMB135X_CHARGER=y
 CONFIG_SMB1351_USB_CHARGER=y
 CONFIG_QPNP_SMBCHARGER=y
+CONFIG_QPNP_SMBCHARGER_EXTENSION=y
 CONFIG_QPNP_TYPEC=y
 CONFIG_MSM_APM=y
 CONFIG_SENSORS_QPNP_ADC_VOLTAGE=y
