arm64: DT: msm8996-sde: Refactor SDE DT for k4.9
The SDE driver in k4.9 needs us to specify sizes for each address
range (each block).
Moreover, add the WB display node, adapt the DTs to the common
clock framework and rename phandles to reflect the names that
we have in SDM845.

--- a/arch/arm64/boot/dts/qcom/msm8996-sde-display.dtsi
+++ b/arch/arm64/boot/dts/qcom/msm8996-sde-display.dtsi
@@ -97,6 +97,12 @@
 		};
 	};
 
+	sde_wb: qcom,wb-display@0 {
+		compatible = "qcom,wb-display";
+		cell-index = <0>;
+		label = "wb_display";
+	};
+
 	sde_hdmi: qcom,hdmi-display {
 		compatible = "qcom,hdmi-display";
 		label = "sde_hdmi";
@@ -106,6 +112,6 @@
 };
 
 &mdss_mdp {
-	connectors = <&sde_hdmi_tx &sde_hdmi>;
+	connectors = <&sde_wb>; // &sde_hdmi_tx &sde_hdmi>;
 };
 
