--- a/arch/arm64/boot/dts/qcom/msm8996-sde.dtsi
+++ b/arch/arm64/boot/dts/qcom/msm8996-sde.dtsi
@@ -11,7 +11,7 @@
  */
 
 &soc {
-	sde_kms: qcom,sde_kms@900000 {
+	mdss_mdp: qcom,sde_kms@900000 {
 		compatible = "qcom,sde-kms";
 		reg = <0x00900000 0x90000>,
 		      <0x009b0000 0x1040>,
@@ -26,7 +26,7 @@
 		clocks = <&clock_mmss MDSS_AHB_CLK>,
 			 <&clock_mmss MDSS_AXI_CLK>,
 			 <&clock_mmss MDP_CLK_SRC>,
-			 <&clock_mmss MDSS_MDP_VOTE_CLK>,
+			 <&clock_mmss_vote MDSS_MDP_VOTE_CLK>,
 			 <&clock_mmss SMMU_MDP_AXI_CLK>,
 			 <&clock_mmss SMMU_MDP_AHB_CLK>,
 			 <&clock_mmss SMMU_ROT_AXI_CLK>,
@@ -53,52 +53,97 @@
 		#interrupt-cells = <1>;
 		iommus = <&mdp_smmu 0>;
 
-		gpus = <&msm_gpu>;
+		#address-cells = <1>;
+		#size-cells = <0>;
+
+		#power-domain-cells = <0>;
+
+		//gpus = <&msm_gpu>;
 
 		/* hw blocks */
 		qcom,sde-off = <0x1000>;
+		qcom,sde-len = <0x454>;
+
 		qcom,sde-ctl-off = <0x2000 0x2200 0x2400
 				     0x2600 0x2800>;
+		qcom,sde-ctl-size = <0x64>;
+		qcom,sde-ctl-display-pref = "primary", "primary", "none",
+						"none", "none";
+
 		qcom,sde-mixer-off = <0x45000 0x46000 0x47000
 				      0x48000 0x49000 0x4a000>;
+		qcom,sde-mixer-size = <0x2bc>;
+		qcom,sde-mixer-display-pref = "primary", "primary", "none",
+						"none", "none", "none";
+
+		qcom,sde-dspp-top-off = <0x1300>;
+		qcom,sde-dspp-top-size = <0xc>;
+
 		qcom,sde-dspp-off = <0x55000 0x57000>;
+		qcom,sde-dspp-size = <0x22c>;
+		//qcom,sde-dspp-size = <0x17e0>;
+
 		qcom,sde-dspp-ad-off = <0x24000 0x22800>;
 		qcom,sde-dspp-ad-version = <0x00030000>;
+
 		qcom,sde-wb-off = <0x66000>;
+		qcom,sde-wb-size = <0x2c0>;
+
 		qcom,sde-wb-id = <2>;
 		qcom,sde-wb-xin-id = <6>;
 		qcom,sde-wb-clk-ctrl = <0x2bc 16>;
+
 		qcom,sde-intf-off = <0x6b000 0x6b800
 					0x6c000 0x6c800>;
+		qcom,sde-intf-size = <0x268>;
+
 		qcom,sde-intf-type = "none", "dsi", "dsi", "hdmi";
 		qcom,sde-pp-off = <0x71000 0x71800
 					  0x72000 0x72800 0x73000>;
 		qcom,sde-pp-slave = <0x0 0x0 0x0 0x0 0x1>;
+		qcom,sde-pp-size = <0xd4>;
+
 		qcom,sde-te2-off = <0x2000 0x2000 0x0 0x0 0x0>;
+
 		qcom,sde-cdm-off = <0x7a200>;
+		qcom,sde-cdm-size = <0x224>;
+
 		qcom,sde-dsc-off = <0x10000 0x10000 0x0 0x0 0x0>;
+		qcom,sde-dsc-size = <0x140>;
+
+/*
+		qcom,sde-dither-off = <0x30e0 0x30e0 0x30e0 0x30e0 0x0>;
+		qcom,sde-dither-version = <0x00010000>;
+		qcom,sde-dither-size = <0x20>;
+*/
+
 		qcom,sde-intf-max-prefetch-lines = <0x15 0x15 0x15 0x15>;
 
 		qcom,sde-sspp-type = "vig", "vig", "vig",
 				      "vig", "rgb", "rgb",
 				      "rgb", "rgb", "dma",
-				      "dma", "cursor", "cursor";
+				      "dma"; //, "cursor", "cursor";
 
 		qcom,sde-sspp-off = <0x5000 0x7000 0x9000
 				      0xb000 0x15000 0x17000
 				      0x19000 0x1b000 0x25000
-				      0x27000 0x35000 0x37000>;
+				      0x27000>; // 0x35000 0x37000>;
+		qcom,sde-sspp-src-size = <0x150>;
 
 		qcom,sde-sspp-xin-id = <0 4 8
 					12 1 5
 					9 13 2
-					10 7 7>;
+					10>; // 7 7>;
+
+		qcom,sde-mixer-pair-mask = <2 1 6 0 0 3>;
+		qcom,sde-mixer-blend-op-off = <0x20 0x50 0x80 0xb0
+					       0x230 0x260 0x290>;
 
 		/* offsets are relative to "mdp_phys + qcom,sde-off */
 		qcom,sde-sspp-clk-ctrl = <0x2ac 0>, <0x2b4 0>, <0x2bc 0>,
 				  <0x2c4 0>, <0x2ac 4>, <0x2b4 4>, <0x2bc 4>,
-				  <0x2c4 4>, <0x2ac 8>, <0x2b4 8>, <0x3a8 16>,
-				  <0x3b0 16>;
+				  <0x2c4 4>, <0x2ac 8>, <0x2b4 8>; //, <0x3a8 16>,
+				 // <0x3b0 16>;
 		qcom,sde-qseed-type = "qseedv2";
 		qcom,sde-csc-type = "csc";
 		qcom,sde-mixer-linewidth = <2560>;
@@ -182,9 +227,14 @@
 			};
 		};
 
-		smmu_kms_unsec: qcom,smmu_kms_unsec_cb {
-			compatible = "qcom,smmu_kms_unsec";
+		smmu_sde_unsec: qcom,smmu_sde_unsec_cb {
+			compatible = "qcom,smmu_sde_unsec";
 			iommus = <&mdp_smmu 0>;
+		};
+
+		smmu_sde_sec: qcom,smmu_sde_sec_cb {
+			compatible = "qcom,smmu_sde_sec";
+			iommus = <&mdp_smmu 1>;
 		};
 
 		/* data and reg bus scale settings */
@@ -213,7 +263,7 @@
 		};
 	};
 
-	sde_dsi0: qcom,sde_dsi_ctrl0@994000 {
+	mdss_dsi0: qcom,sde_dsi_ctrl0@994000 {
 		compatible = "qcom,dsi-ctrl-hw-v1.4";
 		label = "dsi-ctrl-0";
 		cell-index = <0>;
@@ -225,7 +275,7 @@
 		vdda-supply = <&pm8994_l2>;
 		vcca-supply = <&pm8994_l28>;
 
-		clocks = <&clock_mmss MDSS_MDP_VOTE_CLK>,
+		clocks = <&clock_mmss_vote MDSS_MDP_VOTE_CLK>,
 			 <&clock_mmss MDSS_AHB_CLK>,
 			 <&clock_mmss MMSS_MISC_AHB_CLK>,
 			 <&clock_mmss MDSS_AXI_CLK>,
@@ -237,7 +287,7 @@
 
 		clock-names = "mdp_core_clk", "iface_clk",
 			"core_mmss_clk", "bus_clk",
-			"byte_clk", "pixel_clk", "core_clk",
+			"byte_clk", "pixel_clk", "esc_clk",
 			"byte_clk_rcg", "pixel_clk_rcg";
 
 		/* axi bus scale settings */
@@ -248,7 +298,7 @@
 			<22 512 0 0>,
 			<22 512 0 1000>;
 
-		interrupt-parent = <&sde_kms>;
+		interrupt-parent = <&mdss_mdp>;
 		interrupts = <4 0>;
 		qcom,core-supply-entries {
 			#address-cells = <1>;
@@ -289,7 +339,7 @@
 		};
 	};
 
-	sde_dsi1: qcom,sde_dsi_ctrl1@996000 {
+	mdss_dsi1: qcom,sde_dsi_ctrl1@996000 {
 		compatible = "qcom,dsi-ctrl-hw-v1.4";
 		label = "dsi-ctrl-1";
 		cell-index = <1>;
@@ -301,7 +351,7 @@
 		vdda-supply = <&pm8994_l2>;
 		vcca-supply = <&pm8994_l28>;
 
-		clocks = <&clock_mmss MDSS_MDP_VOTE_CLK>,
+		clocks = <&clock_mmss_vote MDSS_MDP_VOTE_CLK>,
 			 <&clock_mmss MDSS_AHB_CLK>,
 			 <&clock_mmss MMSS_MISC_AHB_CLK>,
 			 <&clock_mmss MDSS_AXI_CLK>,
@@ -312,7 +362,7 @@
 			 <&clock_mmss PCLK1_CLK_SRC>;
 		clock-names = "mdp_core_clk", "iface_clk",
 			"core_mmss_clk", "bus_clk",
-			"byte_clk", "pixel_clk", "core_clk",
+			"byte_clk", "pixel_clk", "esc_clk",
 			"byte_clk_rcg", "pixel_clk_rcg";
 
 		/* axi bus scale settings */
@@ -323,7 +373,7 @@
 			<22 512 0 0>,
 			<22 512 0 1000>;
 
-		interrupt-parent = <&sde_kms>;
+		interrupt-parent = <&mdss_mdp>;
 		interrupts = <5 0>;
 		qcom,core-supply-entries {
 			#address-cells = <1>;
@@ -363,8 +413,8 @@
 		};
 	};
 
-	sde_dsi_phy0: qcom,sde_dsi_phy0@994400 {
-		compatible = "qcom,dsi-phy-v4.0";
+	mdss_dsi_phy0: qcom,mdss_dsi_phy0@994400 {
+		compatible = "qcom,dsi-phy-v2.0";
 		label = "dsi-phy-0";
 		cell-index = <0>;
 		reg = <0x994400 0x588>;
@@ -373,7 +423,7 @@
 		gdsc-supply = <&gdsc_mdss>;
 		vdda-supply = <&pm8994_l2>;
 
-		clocks = <&clock_mmss MDSS_MDP_VOTE_CLK>,
+		clocks = <&clock_mmss_vote MDSS_MDP_VOTE_CLK>,
 			 <&clock_mmss MDSS_AHB_CLK>,
 			 <&clock_mmss MMSS_MISC_AHB_CLK>,
 			 <&clock_mmss MDSS_AXI_CLK>;
@@ -422,8 +472,8 @@
 		};
 	};
 
-	sde_dsi_phy1: qcom,sde_dsi_phy1@996400 {
-		compatible = "qcom,dsi-phy-v4.0";
+	mdss_dsi_phy1: qcom,mdss_dsi_phy1@996400 {
+		compatible = "qcom,dsi-phy-v2.0";
 		label = "dsi-phy-1";
 		cell-index = <1>;
 		reg = <0x996400 0x588>;
@@ -432,7 +482,7 @@
 		gdsc-supply = <&gdsc_mdss>;
 		vdda-supply = <&pm8994_l2>;
 
-		clocks = <&clock_mmss MDSS_MDP_VOTE_CLK>,
+		clocks = <&clock_mmss_vote MDSS_MDP_VOTE_CLK>,
 			 <&clock_mmss MDSS_AHB_CLK>,
 			 <&clock_mmss MMSS_MISC_AHB_CLK>,
 			 <&clock_mmss MDSS_AXI_CLK>;
@@ -490,7 +540,7 @@
 		reg-names = "core_physical",
 			"qfprom_physical",
 			"hdcp_physical";
-		clocks = <&clock_mmss MDSS_MDP_VOTE_CLK>,
+		clocks = <&clock_mmss_vote MDSS_MDP_VOTE_CLK>,
 			 <&clock_mmss MDSS_AHB_CLK>,
 			 <&clock_mmss MDSS_HDMI_CLK>,
 			 <&clock_mmss MDSS_HDMI_AHB_CLK>,
@@ -501,7 +551,7 @@
 			"core_clk",
 			"alt_iface_clk",
 			"extp_clk";
-		interrupt-parent = <&sde_kms>;
+		interrupt-parent = <&mdss_mdp>;
 		interrupts = <8 0>;
 		hpd-gdsc-supply = <&gdsc_mdss>;
 		qcom,hdmi-tx-hpd-gpio = <&pm8994_mpps 4 0>;
@@ -515,6 +565,77 @@
 
 		sde_hdmi_audio: qcom,sde-hdmi-audio-rx {
 			compatible = "qcom,msm-hdmi-audio-codec-rx";
+		};
+	};
+
+
+	mdss_rotator: qcom,mdss_rotator {
+		compatible = "qcom,sde_rotator";
+		reg = <0x00900000 0x90000>,
+		      <0x009b8000 0x1040>;
+		reg-names = "mdp_phys",
+			"rot_vbif_phys";
+
+		#list-cells = <1>;
+
+		qcom,mdss-wb-count = <1>;
+		qcom,mdss-wb-id = <0>;
+		qcom,mdss-ctl-id = <4>;
+		qcom,mdss-highest-bank-bit = <0x2>;
+		/* Bus Scale Settings */
+		qcom,msm-bus,name = "mdss_rotator";
+		qcom,msm-bus,num-cases = <3>;
+		qcom,msm-bus,num-paths = <1>;
+		qcom,msm-bus,vectors-KBps =
+			<25 512 0 0>,
+			<25 512 0 6400000>,
+			<25 512 0 6400000>;
+
+		rot-vdd-supply = <&gdsc_mdss>;
+		rot-mmagic-mdss-gdsc-supply = <&gdsc_mmagic_mdss>;
+
+		qcom,supply-names = "rot-mmagic-mdss-gdsc", "rot-vdd";
+
+		clocks = <&clock_mmss MMSS_MISC_AHB_CLK>,
+			<&clock_mmss_vote MDSS_ROTATOR_VOTE_CLK>,
+			<&clock_mmss MDSS_AHB_CLK>,
+			<&clock_mmss MDSS_AXI_CLK>,
+			<&clock_mmss MDP_CLK_SRC>;
+		clock-names = "mnoc_clk", "rot_core_clk",
+			"iface_clk", "axi_clk", "rot_clk";
+
+
+		interrupt-parent = <&mdss_mdp>;
+		interrupts = <2 0>;
+
+		power-domains = <&mdss_mdp>;
+
+		/* VBIF QoS remapper settings*/
+		qcom,mdss-rot-vbif-qos-setting = <1 1 1 1>;
+
+		qcom,mdss-default-ot-rd-limit = <32>;
+		qcom,mdss-default-ot-wr-limit = <16>;
+
+		smmu_rot_unsecure: qcom,smmu_rot_unsec_cb {
+			compatible = "qcom,smmu_sde_rot_unsec";
+			iommus = <&rot_smmu 0>;
+			gdsc-mdss-supply = <&gdsc_mmagic_mdss>;
+			clocks = <&clock_mmss SMMU_ROT_AHB_CLK>,
+				<&clock_mmss MMAGIC_MDSS_AXI_CLK>,
+				<&clock_mmss SMMU_ROT_AXI_CLK>;
+			clock-names = "rot_ahb_clk", "mmagic_mdss_axi_clk",
+				"rot_axi_clk";
+		};
+
+		smmu_rot_secure: qcom,smmu_rot_sec_cb {
+			compatible = "qcom,smmu_sde_rot_sec";
+			iommus = <&rot_smmu 1>;
+			gdsc-mdss-supply = <&gdsc_mmagic_mdss>;
+			clocks = <&clock_mmss SMMU_ROT_AHB_CLK>,
+				<&clock_mmss MMAGIC_MDSS_AXI_CLK>,
+				<&clock_mmss SMMU_ROT_AXI_CLK>;
+			clock-names = "rot_ahb_clk", "mmagic_mdss_axi_clk",
+				"rot_axi_clk";
 		};
 	};
 };
