--- a/arch/arm64/boot/dts/qcom/dsi-panel-somc-synaptics-jdi-1080p-cmd.dtsi
+++ b/arch/arm64/boot/dts/qcom/dsi-panel-somc-synaptics-jdi-1080p-cmd.dtsi
@@ -355,6 +355,7 @@
 				qcom,mdss-dsi-h-back-porch = <8>;
 				qcom,mdss-dsi-h-pulse-width = <8>;
 				qcom,mdss-dsi-h-front-porch = <56>;
+				qcom,mdss-dsi-h-sync-skew = <0>;
 				qcom,mdss-dsi-v-back-porch = <8>;
 				qcom,mdss-dsi-v-pulse-width = <8>;
 				qcom,mdss-dsi-v-front-porch = <227>;
@@ -394,6 +395,7 @@
 				qcom,mdss-dsi-h-back-porch = <8>;
 				qcom,mdss-dsi-h-pulse-width = <8>;
 				qcom,mdss-dsi-h-front-porch = <56>;
+				qcom,mdss-dsi-h-sync-skew = <0>;
 				qcom,mdss-dsi-v-back-porch = <8>;
 				qcom,mdss-dsi-v-pulse-width = <8>;
 				qcom,mdss-dsi-v-front-porch = <227>;
