--- a/arch/arm64/boot/dts/qcom/dsi-panel-somc-kagura.dtsi
+++ b/arch/arm64/boot/dts/qcom/dsi-panel-somc-kagura.dtsi
@@ -57,7 +57,15 @@
 		qcom,dynamic-mode-switch-type = "dynamic-resolution-switch-susres";
 		qcom,mdss-dsi-display-timings {
 			1080p60 {
+				qcom,display-topology = <1 0 1>;
+				qcom,default-topology-index = <0>;
 				qcom,mdss-dsi-panel-timings-phy-v2 = [
+						24 1f 08 09 05 03 04 a0
+						24 1f 08 09 05 03 04 a0
+						24 1f 08 09 05 03 04 a0
+						24 1f 08 09 05 03 04 a0
+						24 1b 08 09 05 03 04 a0];
+				qcom,mdss-dsi-panel-phy-timings = [
 						24 1f 08 09 05 03 04 a0
 						24 1f 08 09 05 03 04 a0
 						24 1f 08 09 05 03 04 a0
@@ -80,7 +88,15 @@
 			};
 
 			1080p120 {
+				qcom,display-topology = <1 0 1>;
+				qcom,default-topology-index = <0>;
 				qcom,mdss-dsi-panel-timings-phy-v2 = [
+						24 1f 08 09 05 03 04 a0
+						24 1f 08 09 05 03 04 a0
+						24 1f 08 09 05 03 04 a0
+						24 1f 08 09 05 03 04 a0
+						24 1b 08 09 05 03 04 a0];
+				qcom,mdss-dsi-panel-phy-timings = [
 						24 1f 08 09 05 03 04 a0
 						24 1f 08 09 05 03 04 a0
 						24 1f 08 09 05 03 04 a0
@@ -127,7 +143,15 @@
 		qcom,dynamic-mode-switch-type = "dynamic-resolution-switch-susres";
 		qcom,mdss-dsi-display-timings {
 			1080p60 {
+				qcom,display-topology = <1 0 1>;
+				qcom,default-topology-index = <0>;
 				qcom,mdss-dsi-panel-timings-phy-v2 = [
+						24 1f 08 09 05 03 04 a0
+						24 1f 08 09 05 03 04 a0
+						24 1f 08 09 05 03 04 a0
+						24 1f 08 09 05 03 04 a0
+						24 1b 08 09 05 03 04 a0];
+				qcom,mdss-dsi-panel-phy-timings = [
 						24 1f 08 09 05 03 04 a0
 						24 1f 08 09 05 03 04 a0
 						24 1f 08 09 05 03 04 a0
@@ -140,7 +164,15 @@
 						05 01 00 00 78 00 01 11];
 			};
 			1080p120 {
+				qcom,display-topology = <1 0 1>;
+				qcom,default-topology-index = <0>;
 				qcom,mdss-dsi-panel-timings-phy-v2 = [
+						24 1f 08 09 05 03 04 a0
+						24 1f 08 09 05 03 04 a0
+						24 1f 08 09 05 03 04 a0
+						24 1f 08 09 05 03 04 a0
+						24 1b 08 09 05 03 04 a0];
+				qcom,mdss-dsi-panel-phy-timings = [
 						24 1f 08 09 05 03 04 a0
 						24 1f 08 09 05 03 04 a0
 						24 1f 08 09 05 03 04 a0
