arm64: DT: Tone-SDE: Add property to signal continuous splash enabled
The continuous splash is enabled on Tone bootloaders.

--- a/arch/arm64/boot/dts/qcom/msm8996-tone-common-sde-overlay.dtsi
+++ b/arch/arm64/boot/dts/qcom/msm8996-tone-common-sde-overlay.dtsi
@@ -117,3 +117,7 @@ msm_drm.dsi_display0=dsi_panel_cmd_display:config0";
 		ibb-supply = <&ibb_regulator>;
 	};	
 };
+
+&mdss_dsi0 {
+	qcom,cont-splash-enabled;
+};
