--- a/arch/arm64/boot/dts/qcom/msm8996-tone-common.dtsi
+++ b/arch/arm64/boot/dts/qcom/msm8996-tone-common.dtsi
@@ -15,6 +15,9 @@
  * it under the terms of the GNU General Public License version 2, as
  * published by the Free Software Foundation.
  */
+
+#include "msm8996-tone-common-thermal.dtsi"
+
 / {
 	aliases {
 		i2c3 = &i2c_3;
