arm64: configs: Tone: Refresh configuration for thermals and FPC
Activate the new virtual thermal driver, use legacy BCL,
enable FPC sensor.

--- a/arch/arm64/configs/aosp_tone_keyaki_sde_defconfig
+++ b/arch/arm64/configs/aosp_tone_keyaki_sde_defconfig
@@ -370,6 +370,7 @@ CONFIG_PON_SOMC_ORG=y
 CONFIG_INPUT_KEYCHORD=y
 CONFIG_INPUT_UINPUT=y
 CONFIG_INPUT_GPIO=y
+CONFIG_FPC1145_PLATFORM=y
 # CONFIG_SERIO is not set
 # CONFIG_VT is not set
 # CONFIG_LEGACY_PTYS is not set
@@ -419,11 +420,13 @@ CONFIG_THERMAL_GOV_LOW_LIMITS=y
 CONFIG_CPU_THERMAL=y
 CONFIG_DEVFREQ_THERMAL=y
 CONFIG_THERMAL_QPNP=y
+CONFIG_VIRTUAL_THERMAL=y
 CONFIG_THERMAL_QPNP_ADC_TM=y
 CONFIG_THERMAL_TSENS=y
 CONFIG_MSM_BCL_PERIPHERAL_CTL=y
 CONFIG_LIMITS_MONITOR=y
 CONFIG_LIMITS_LITE_HW=y
+CONFIG_MSM_BCL_PERIPHERAL_CTL_LEGACY=y
 CONFIG_QTI_THERMAL_LIMITS_DCVS=y
 CONFIG_QTI_VIRTUAL_SENSOR=y
 CONFIG_QTI_QMI_COOLING_DEVICE=y
