--- a/arch/arm64/boot/dts/qcom/msm8996-pm.dtsi
+++ b/arch/arm64/boot/dts/qcom/msm8996-pm.dtsi
@@ -155,6 +155,7 @@
 						qcom,ss-power = <198>;
 						qcom,energy-overhead = <21850>;
 						qcom,time-overhead = <120>;
+						qcom,use-broadcast-timer;
 						qcom,hyp-psci;
 					};
 
@@ -167,6 +168,7 @@
 						qcom,ss-power = <196>;
 						qcom,energy-overhead = <62248>;
 						qcom,time-overhead = <210>;
+						qcom,use-broadcast-timer;
 						qcom,reset-level =
 							<LPM_RESET_LVL_PC>;
 					};
@@ -248,6 +250,7 @@
 						qcom,ss-power = <198>;
 						qcom,energy-overhead = <21850>;
 						qcom,time-overhead = <120>;
+						qcom,use-broadcast-timer;
 						qcom,hyp-psci;
 					};
 
@@ -260,6 +263,7 @@
 						qcom,ss-power = <196>;
 						qcom,energy-overhead = <62248>;
 						qcom,time-overhead = <210>;
+						qcom,use-broadcast-timer;
 						qcom,reset-level =
 							<LPM_RESET_LVL_PC>;
 					};
