arm: DT: dsi-panel-somc: auo: Specify panel clockrate to fix DRS
Specifying clockrate is mandatory to fix DRS, otherwise bad
rate calculation happens.

Signed-off-by: Alin Jerpelea <alin.jerpelea@sony.com>

--- a/arch/arm64/boot/dts/qcom/dsi-panel-somc-synaptics-auo-1080p-cmd.dtsi
+++ b/arch/arm64/boot/dts/qcom/dsi-panel-somc-synaptics-auo-1080p-cmd.dtsi
@@ -364,6 +364,7 @@
 				qcom,mdss-tear-check-sync-init-val = <1920>;
 				qcom,mdss-tear-check-start-pos = <1920>;
 				qcom,mdss-tear-check-rd-ptr-trigger-intr = <1921>;
+                                qcom,mdss-dsi-panel-clockrate = <899000000>;
 			};
 
 			1080p120 {
@@ -395,6 +396,7 @@
 				qcom,mdss-tear-check-sync-init-val = <1920>;
 				qcom,mdss-tear-check-start-pos = <1920>;
 				qcom,mdss-tear-check-rd-ptr-trigger-intr = <1921>;
+                                qcom,mdss-dsi-panel-clockrate = <899000000>;
 			};
 		};
 	};
