arm64: DT: Tone: add thermal zone for flash_therm
adc channels with 'qcom,vadc-thermal-node' declared need a thermal zone that references the channel node in 'thermal-sensors' to probe successfully.
for tone, only flash_therm was lacking a thermal zone, so add a dummy one

Change-Id: Ibc44926fc70bcfdb094ad71a4441690fe1390588

--- a/arch/arm64/boot/dts/qcom/msm8996-tone-common-thermal.dtsi
+++ b/arch/arm64/boot/dts/qcom/msm8996-tone-common-thermal.dtsi
@@ -555,4 +555,11 @@
 			};
 		};
 	};
+
+	flash-therm-adc {
+		polling-delay-passive = <0>;
+		polling-delay = <0>;
+		thermal-sensors = <&pm8994_vadc 0x14>;
+		thermal-governor = "user_space";
+	};
 };
