tone-common: dts: adjust nfc configuration
Signed-off-by: Erik Castricum <git@cas-online.nl>
Change-Id: Icde1ae16293bc14ec1d0afd86b376e9fb273ba75

--- a/arch/arm/boot/dts/qcom/msm8996-tone-kagura_generic.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8996-tone-kagura_generic.dtsi
@@ -20,6 +20,8 @@
 &soc {
 	 /*I2C : BLSP8 */
 	i2c@75b6000 { /* BLSP2 QUP1 */
+		/delete-node/ nq@28;
+
 		nfc@28 {
 			compatible = "nxp,pn547";
 			reg = <0x28>;
