tone: dt: change fstab configuration
on non sodp-based customs we usually donot use odm partition

Signed-off-by: Erik Castricum <git@cas-online.nl>
Change-Id: I79f02705a797080f0966a72bda6a38d901c2a5d8

--- a/arch/arm64/boot/dts/qcom/msm8996-tone-common.dtsi
+++ b/arch/arm64/boot/dts/qcom/msm8996-tone-common.dtsi
@@ -41,9 +41,6 @@
 			compatible = "android,firmware";
 			fstab {
 				compatible = "android,fstab";
-				vendor {
-					status = "disabled";
-				};
 				system {
 					compatible = "android,system";
 					dev = "/dev/block/platform/soc/7464900.sdhci/by-name/system";
@@ -52,8 +49,8 @@
 					fsmgr_flags = "wait";
 					status = "ok";
 				};
-				odm {
-					compatible = "android,odm";
+				vendor {
+					compatible = "android,vendor";
 					dev = "/dev/block/platform/soc/7464900.sdhci/by-name/oem";
 					type = "ext4";
 					mnt_flags = "ro,barrier=1,discard";
