--- a/arch/arm64/configs/tone_kagura_defconfig
+++ b/arch/arm64/configs/tone_kagura_defconfig
@@ -32,7 +32,6 @@ CONFIG_RELAY=y
 CONFIG_BLK_DEV_INITRD=y
 # CONFIG_RD_BZIP2 is not set
 # CONFIG_RD_LZMA is not set
-CONFIG_RD_XZ=y
 # CONFIG_RD_LZO is not set
 # CONFIG_RD_LZ4 is not set
 # CONFIG_MEMBARRIER is not set
@@ -246,7 +245,6 @@ CONFIG_BT_MSM_SLEEP=y
 CONFIG_BT_BCM43XX=y
 CONFIG_CFG80211=y
 CONFIG_RFKILL=y
-CONFIG_NFC_NQ=y
 CONFIG_IPC_ROUTER=y
 CONFIG_IPC_ROUTER_SECURITY=y
 CONFIG_FW_LOADER_USER_HELPER_FALLBACK=y
@@ -260,7 +258,6 @@ CONFIG_BLK_DEV_RAM_SIZE=8192
 CONFIG_QSEECOM=y
 CONFIG_HDCP_QSEECOM=y
 CONFIG_UID_SYS_STATS=y
-CONFIG_NFC_PN547=y
 CONFIG_LDO_VIBRATOR=y
 CONFIG_RAMDUMP_TAGS=y
 CONFIG_POWERKEY_FORCECRASH=y
@@ -270,6 +267,8 @@ CONFIG_SIM_DETECT=y
 CONFIG_MEMORY_STATE_TIME=y
 CONFIG_SENSORS_TCS3490_KAGURA=y
 CONFIG_TOF_SENSOR=y
+CONFIG_NFC_PN547=y
+CONFIG_NFC_PN547_PMC_CLK_REQ=y
 CONFIG_EEPROM_AT24=y
 CONFIG_SCSI=y
 CONFIG_BLK_DEV_SD=y
